# termopus

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agentyard.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release-oss.yml  release.yml
.well-known/: agentyard-verify.txt
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  termopus_secrets.cpp
app/android/app/src/main/kotlin/com/termopus/app/: MainActivity.kt
app/android/app/src/main/kotlin/com/termopus/app/bridge/: SecurityChannel.kt
app/android/app/src/main/kotlin/com/termopus/app/network/: MessageQueue.kt  NetworkMonitor.kt  SecureWebSocket.kt
app/android/app/src/main/kotlin/com/termopus/app/push/: SilentPushService.kt
app/android/app/src/main/kotlin/com/termopus/app/security/: AntiTamper.kt  BiometricCryptoService.kt  BiometricGate.kt  CertificateManager.kt  CryptoEngine.kt  DeviceAttestation.kt  HardwareKeyService.kt  NativeSecrets.kt  SecureKeyManager.kt
app/android/app/src/main/res/xml/: network_security_config.xml
app/ios/: Podfile
app/ios/Flutter/: Debug.xcconfig  Release.xcconfig
app/ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
app/ios/Runner.xcodeproj/: project.pbxproj
app/ios/Runner/Bridge/: SecurityChannel.swift
app/ios/Runner/Network/: MessageQueue.swift  NetworkMonitor.swift  SecureWebSocket.swift
app/ios/Runner/Security/: AntiTamper.swift  BiometricCryptoService.swift  BiometricGate.swift  CertificateManager.swift  CryptoEngine.swift  DeviceAttestation.swift  HardwareKeyService.swift  NativeSecrets.c  NativeSecrets.h  NativeSecretsWrapper.swift  SecureKeyManager.swift
app/lib/: app.dart  main.dart
app/lib/core/models/: session_capabilities.dart
app/lib/core/platform/: method_channels.dart  security_channel.dart
app/lib/core/providers/: active_agents_provider.dart  active_tasks_provider.dart  active_transfers_provider.dart  auth_provider.dart  cert_renewal_provider.dart  chat_provider.dart  claude_config_provider.dart  connection_provider.dart  extensions_provider.dart  http_tunnel_provider.dart  live_state_provider.dart  memory_provider.dart  session_picker_provider.dart  session_provider.dart
app/lib/core/push/: push_handler.dart
app/lib/core/services/: security_service.dart
app/lib/features/auth/: biometric_lock_screen.dart
app/lib/features/chat/: chat_screen.dart
app/lib/features/chat/widgets/: action_buttons.dart  active_agents_bar.dart  ask_question_card.dart  browser_view.dart  code_block.dart  diff_view.dart  file_transfer_bar.dart  file_transfer_card.dart  input_bar.dart  message_bubble.dart  message_list.dart  model_selector.dart  slash_command_picker.dart  task_progress_bar.dart  tool_use_card.dart
app/lib/features/onboarding/: biometric_setup.dart  onboarding_screen.dart  provisioning_screen.dart
app/lib/features/pairing/: pairing_progress.dart  pairing_success.dart  qr_scanner_screen.dart
app/lib/features/sessions/: session_card.dart  sessions_list_screen.dart
app/lib/features/settings/: about_screen.dart  app_settings_screen.dart  bridge_controls.dart  security_settings.dart  settings_screen.dart
app/lib/models/: action.dart  connection_state.dart  message.dart  message.freezed.dart  message.g.dart  session.dart  session.freezed.dart  session.g.dart  session_live_state.dart
app/lib/shared/: claude_commands.dart  constants.dart  extensions.dart  quick_actions.dart  responsive.dart  theme.dart
app/test/: widget_test.dart
assets/: Termopus.icns
bridge/: Cargo.toml  build.rs
bridge/resources/: Termopus.icns
bridge/src/: lib.rs  main.rs  pin.rs  safe_tools.rs  touch_id.rs
bridge/src/config/: storage.rs
bridge/src/crypto/: aes.rs  kdf.rs  keypair.rs  mod.rs
bridge/src/file_transfer/: mod.rs  protocol.rs  receive.rs  send.rs  zip.rs
bridge/src/gui/: mod.rs
bridge/src/hooks/: config.rs  mod.rs  permissions.rs  watcher.rs
bridge/src/http_tunnel/: mod.rs  proxy.rs
bridge/src/parser/: ansi.rs  code_block.rs  diff.rs  mod.rs
bridge/src/platform/: mod.rs  unix.rs  windows.rs
bridge/src/qr/: generator.rs
bridge/src/relay/: messages.rs  mod.rs  tunnel.rs  websocket.rs
bridge/src/session/: manager.rs  mod.rs  stream_json.rs  task.rs  transcript.rs  transcript_watcher.rs
bridge/src/setup/: mod.rs
bridge/tests/: qr_security_tests.rs
bridge/wix/: generate_bitmaps.ps1  license.rtf  locale.wxl  main.wxs
docs/: ARCHITECTURE.md  MTLS.md  SELF-HOSTING.md  TROUBLESHOOTING.md
provisioning_api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
provisioning_api/src/: index.ts
provisioning_api/src/cloudflare/: access.ts
provisioning_api/src/crypto/: ca.ts  csr.ts
provisioning_api/src/handlers/: challenge.ts  health.ts  provision.ts  renew.ts  revoke.ts
provisioning_api/src/types/: webcrypto.d.ts
provisioning_api/src/validation/: apple.ts  google.ts  key_attestation.ts
relay_worker/: package-lock.json  package.json  wrangler.toml
relay_worker/src/: index.ts  push.ts  relay.test.ts  relay.ts  types.ts
scripts/: setup-mtls.sh  setup.ps1  setup.sh
